add cmax & time comparison

--- a/Lab4/src/sprawozdanie.ipynb
+++ b/Lab4/src/sprawozdanie.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Podstawowym celem laboratorium bylo zapoznanie sie z algorytmem a rozwiazywania problemu RPQ - algorytmem Schrage. Problem RPQ zakada, ze kazde zadanie zanim zostanie wykonane musi przejsc proces przygotowania, nastepnie jest wykonywane nieprzerwanie przez kolejny okres czasu, aby na koniec zostalo dostarczone znowu w danym czasie. Totez kazde zadanie opisywane jest przez trzy czasy."
+    "Podstawowym celem laboratorium bylo zapoznanie sie z algorytmem a rozwiazywania problemu RPQ - algorytmem Schrage. Problem RPQ zakłada, ze kazde zadanie zanim zostanie wykonane musi przejsc proces przygotowania, nastepnie jest wykonywane nieprzerwanie przez kolejny okres czasu, aby na koniec zostalo dostarczone znowu w danym czasie. Totez kazde zadanie opisywane jest przez trzy czasy."
    ]
   },
   {
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -63,7 +63,7 @@
     "# INITIAL ORDER\n",
     "init_order = get_order(tasks)\n",
     "init_makespan = makespan(init_order, tasks)\n",
-    "print \"[INIT] makespan: \", init_makespan"
+    "print (\"[INIT] makespan: \", init_makespan)"
    ]
   },
   {
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,14 +127,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[SHRAGE N^2] makespan: 1513, time: 21.1420059204\n"
+      "[SHRAGE N^2] makespan: 1513, time: 3.5688680000021122\n"
      ]
     }
    ],
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,14 +203,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[SHRAGE N^2 PMTN] makespan: 1492, time: 35.2330207825\n"
+      "[SHRAGE N^2 PMTN] makespan: 1492, time: 10.478117000005227\n"
      ]
     }
    ],
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -329,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -413,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -455,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -535,23 +535,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ SA ] makespan: 1940\n"
+      "[ SA ] makespan: 1499\n"
      ]
     }
    ],
    "source": [
     "from simulated_annealing import simulated_annealing\n",
     "# SIMULATED ANNEALING ORDER\n",
-    "init_temp = 5000\n",
-    "final_temp = 0.1\n",
-    "u = 0.98\n",
+    "init_temp = 50000000\n",
+    "final_temp = 0.00001\n",
+    "u = 0.999\n",
     "cooling_fcn_type = 0\n",
     "move_type = 0\n",
     "insert = 0\n",
@@ -565,8 +565,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Z powodu problemow ze znalezieniem modyfikacji (bez Carliera), porownano dzialanie algorytmu do symulowanego wyzazania. Stwierdzono, ze makespan algorytmu SA jest wiekszy niz makespan algorytmu Schrage. "
+    "Z powodu problemow ze znalezieniem modyfikacji (bez Carliera), porownano dzialanie algorytmu do symulowanego wyzazania. Stwierdzono, ze makespan algorytmu SA jest mniejszy niz makespan algorytmu Schrage przy odpowiednio dobranych parametrach. "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -578,14 +604,14 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.15rc1"
+   "pygments_lexer": "ipython3",
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
