--- a/Lab4/src/sprawozdanie.ipynb
+++ b/Lab4/src/sprawozdanie.ipynb
@@ -574,11 +574,11 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Porównanie"
+   ]
   },
   {
    "cell_type": "code",
